# project-intellectus-ai

./: README.md  package-lock.json  website.html
backend/: folder_struct.txt  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: chat.py  health.py  query.py
backend/app/auth/: auth.py  context.py
backend/app/copilot/: orchestrator.py
backend/app/core/: config.py  database.py  llm_client.py  prompts.py
backend/app/db/: session.py
backend/app/db/models/: business.py  people.py
backend/app/intelligence/: sql_executor.py  sql_validator.py
backend/app/mcp/: client.py
backend/app/mcp/servers/: database_server.py
backend/app/models/: business.py  people.py  system.py
backend/app/schemas/: chat.py
backend/app/seed/: generate_data.py
backend/app/services/: reasoning.py
backend/app/services/sql/: analyzer.py  executor.py  generator.py  sql_service.py  validator.py
backend/app/services/tools/: db_tools.py
backend/data/: v2_01_employee_handbook.docx  v2_02_rfp_response.docx  v2_03_board_meeting.docx
frontend/: frontend_layout.txt  package-lock.json  package.json  vite.config.ts  z_folder_layout.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: apiClient.ts  streamClient.ts
frontend/src/components/: app-sidebar.tsx
frontend/src/pages/: AILogs.tsx  Copilot.tsx  CopilotChat.tsx  Dashboard.tsx  KnowledgeInventory.tsx  Logs.tsx  SignInPage.tsx  SignUp.tsx
frontend/src/services/: AuthRoute.tsx  api.ts  chatService.ts
frontend/src/store/: chatStore.ts  useChatStore.ts
mcp_server/: main.py  pyproject.toml
(+19 files in other folders)
